# CryptoTEK

./: .gitignore  Q_ADAPTIVE_Master_Report_TR.md  README.md  integration_test_report.md  run_integration_tests.py
.github/workflows/: ci.yml
Q-Adaptive-AI/: requirements.txt  run_pipeline.py  run_server.py  test_api_client.py  test_onnx_inference.py
Q-Adaptive-AI/config/: __init__.py
Q-Adaptive-AI/data/: training_data_normal_20260616_200402.csv
Q-Adaptive-AI/models/: calibration_metadata.json  q_adaptive_guardian.onnx  q_adaptive_isolation_forest.joblib
Q-Adaptive-AI/src/: __init__.py  api.py  data_engineering.py  export_onnx.py  model.py  utils.py
Q-Adaptive-Contracts/contracts/: QAdaptiveAccount.sol  QAdaptivePaymaster.sol
Q-Adaptive-Contracts/contracts/interfaces/: IAICore.sol  IUserOperation.sol
Q-Adaptive-ZK/: Cargo.toml  proof_payload.json
Q-Adaptive-ZK/src/: air.rs  bridge.rs  main.rs  trace.rs
docs/: presentation_blueprint_guide.md  references_guide.md
scripts/: capture_screenshots.py  generate_master_deck.py  generate_pdf.py
stitch_q_adaptive_ai_guardian_dashboards/: index.html
stitch_q_adaptive_ai_guardian_dashboards/ai_guardian_canl_telemetri_paneli_t_rk_e/: code.html
stitch_q_adaptive_ai_guardian_dashboards/on_chain_durum_i_zleyicisi_t_rk_e/: code.html
stitch_q_adaptive_ai_guardian_dashboards/q_adaptive_ai_guardian/: DESIGN.md
stitch_q_adaptive_ai_guardian_dashboards/sim_lasyon_enjekt_r_paneli_t_rk_e/: code.html
stitch_q_adaptive_ai_guardian_dashboards/zk_stark_kriptografik_mant_k_paneli_t_rk_e/: code.html
